# Meta-Vision-SolaisNG

./: CMakeLists.txt  compile_opi5.sh  runServerSolais  runTerminal
doc/: SerialControlMessage.md
include/: ArmorDetector.h
lib/: CMakeLists.txt
lib/rknpu/: CMakeLists.txt
src/: ArmorDetector.cpp  CMakeLists.txt  Executor.cpp  OpenCVCamera.cpp
tools/Solais/: main.cpp
